# symvead

./: .gitignore  Cargo.toml  README.md  example-config.toml
src/: analytics.rs  cli.rs  config.rs  coordination.rs  main.rs  metrics.rs  proof.rs  server.rs  session.rs  snapshot.rs  startup.rs  symvead.rs
src/engine/: compressor.rs  config.rs  decompressor.rs  hash.rs  huffman.rs  mod.rs  planner.rs  symbols.rs  tokenizer.rs
src/protocol/: constants.rs  error.rs  frame.rs  handshake.rs  mod.rs
src/storage/: dictionary.rs  engine.rs  explanation.rs  layered.rs  local.rs  metadata.rs  mod.rs  object.rs  persistent.rs  s3.rs  symbols.rs  versioned.rs
src/utils/: buffer.rs  crc.rs  io.rs  limits.rs  mod.rs  varint.rs
