[package]
name = "symvead"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "symvead"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
crc32fast = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
